Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <link href='https://fonts.googleapis.com/css?family=Chivo:900' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -32,6 +32,22 @@
 
         <section id="main_content">
           <h1>
+<a id="isengard" class="anchor" href="#isengard" aria-hidden="true"><span class="octicon octicon-link"></span></a>Isengard</h1>
+
+<p>By popular demand...<br>
+Most of SPMC is merged in Kodi besides the rockchip specifics.</p>
+
+<p>Latest Helix build is: <strong>15.0.0</strong> <a href="https://github.com/koying/SPMC/releases/tag/15.0.0-spmc">link</a><br>
+APK: <a href="https://github.com/koying/SPMC/releases/download/15.0.0-spmc/spmc-armeabi-v7a_15.0.0.apk">link</a><br>
+launcher APK: <a href="https://github.com/koying/SPMC/releases/download/15.0.0-spmc/spmc-armeabi-v7a_15.0.0_launcher.apk">link</a><br>
+X86 APK: <a href="https://github.com/koying/SPMC/releases/download/15.0.0-spmc/spmc-x86_15.0.0.apk">link</a>  </p>
+
+<p>Changelog:</p>
+
+<h3>
+<a id="1500-20150725" class="anchor" href="#1500-20150725" aria-hidden="true"><span class="octicon octicon-link"></span></a>15.0.0 (2015/07/25):</h3>
+
+<h1>
 <a id="helix" class="anchor" href="#helix" aria-hidden="true"><span class="octicon octicon-link"></span></a>Helix</h1>
 
 <p>Those Helix builds will contain XBMC patches which were not accepted, or are not acceptable, in the main XBMC tree. </p>
